# zephyr-workbench

./: .gitignore  .markdownlint.json  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  TEST_INFRA.yaml.yaml  Test01.yaml  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
docs/: case-macos-enterprise.md  index.html  tool-contracts.md  zephyr-core.js
examples/: citrix-igel-desktop-delivery.yaml  governance-policy.yaml  identity-flow.yaml  igel-os12-infrastructure.yaml  macos-intune-secure-access.yaml  macos-intune-windows-domain.yaml  pki-infrastructure.yaml  secure-workplace.yaml  zero-trust-access.yaml
schemas/: architecture.schema.yaml
scripts/: generate_demo_gif.py  generate_js_core.py
tests/: test_add.py  test_analyzer.py  test_cli.py  test_diagram.py  test_diagram_import.py  test_diff.py  test_generate_js.py  test_governance.py  test_history.py  test_impact.py  test_init_wizard.py  test_intelligence.py  test_lifecycle.py  test_memory.py  test_reference.py  test_reporter.py  test_review_templates.py  test_rules.py  test_runtime.py  test_scoring.py  test_search.py  test_snapshots.py  test_templates.py  test_trust_boundaries.py  test_validation.py
zephyr/: __init__.py  _prompts.py  add.py  analyzer.py  cli.py  contracts.py  datamodel.py  diagram.py  diagram_import.py  diff.py  governance.py  history.py  image_import.py  impact.py  init_wizard.py  intelligence.py  lifecycle.py  loader.py  memory.py  models.py  reference.py  reporter.py  result.py  review_templates.py  runtime.py  scoring.py  search.py  snapshots.py  templates.py  (+1 more)
(+17 files in other folders)
