[project]
name = "zephyr-workbench"
version = "0.1.0"
description = "Architecture workbench for modeling, analyzing, and visualizing infrastructure systems and flows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
zephyr = "zephyr.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zephyr"]
